--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 
     Copyright (c) 2015 FeedHenry Ltd, All Rights Reserved.
 
@@ -19,4 +18,5 @@
     <string name="edit_item">Edit item</string>
     <string name="nothing_here">Nothing here yet</string>
     <string name="create_something">Create an image and share with others</string>
+    <string name="sign_in">Sign-In with Google</string>
 </resources>
