--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
 -->
 <resources>
 
-    <string name="app_name">Art Henry</string>
-    <string name="sync_demo_title">Art Henry</string>
+    <string name="app_name">Meme Henry</string>
+    <string name="sync_demo_title">Meme Henry</string>
     <string name="cancel">Cancel</string>
     <string name="test">Test</string>
     <string name="save">Save</string>
@@ -24,5 +24,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_image_menu_title">Add Image</string>
-    <string name="share_project_menu_title">Share Project</string>
+    <string name="share_project_menu_title">Share</string>
+    <string name="pick_image_intent_text">Pick Image Source</string>
 </resources>
