--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="add_image_menu_title">Add Image</string>
     <string name="share_project_menu_title">Share</string>
     <string name="pick_image_intent_text">Pick Image Source</string>
+    <string name="refresh">Refresh</string>
 </resources>
